deployment/deployment.yaml
# proxy.name: kubernetes-dashboard
# upstream: http://kubernetes-dashboard:80/
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jobson-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: overseer
        component: jobson-ui
    spec:
      containers:
      - name: jobson-ui
        image: hbouvier/jobson-ui:0.0.2-0006
        ports:
          - name: http
            containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
