deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobson-ui
  labels:
    component: jobson-ui
spec:
  selector:
    component: jobson-ui
  ports:
  - port: 8080
    name: http
    protocol: TCP
